# Ros2-detection-node

./: .gitmodules  LICENSE  README.md
detection_ros2_node/: CMakeLists.txt  Doxyfile.in  package.xml
detection_ros2_node/cmake/modules/: tensorrt-config.cmake
detection_ros2_node/config/: config_default.yaml
detection_ros2_node/include/detection_ros2_node/: HungarianAlgorithm.h  KalmanBoxTracker.h  SORT.h  Timer.h  Types.h  Utils.h  YoloParser.h  YoloTRT.h  detection_node.hpp
detection_ros2_node/launch/: gesture_det.launch.py  object_det.launch.py
detection_ros2_node/plugins/: CMakeLists.txt  YoloLayerPlugin.cu  YoloLayerPlugin.h
detection_ros2_node/src/: detection_node.cpp  main.cpp
