<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection_ros2_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nkucza@cit-ec.uni-bielefeld.de">nkucza</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <!--<depend>OpenCV</depend>-->
  <depend>image_transport</depend>

  <depend>camera_interfaces</depend>
  <!--<depend>pointcloud_processing</depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
